--- a/include/navbar.html
+++ b/include/navbar.html
@@ -4,7 +4,7 @@
             <img src="./images/Jaspreet.Designs dark.png" alt="Logo" width="200px">
           </a>
           <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
-            <a class="navbtn mr-7 font-medium" href="#Home">
+            <a class="navbtn mr-7 font-medium" href="../Index2.html">
                 <span class="link link-underline link-underline-black text-black"> Home </span>
             </a>
             <a class="navbtn mr-7 font-medium" href="#Experience">
