--- a/include/navbar.html
+++ b/include/navbar.html
@@ -1,10 +1,11 @@
+
 <nav class="navbar text-gray-600 body-font" > 
         <div class=" mx-auto flex flex-wrap flex-col md:flex-row items-center">
           <a class="flex  items-center text-gray-900 ml-8 md:mb-0">
             <img src="./images/Jaspreet.Designs dark.png" alt="Logo" width="200px">
           </a>
           <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
-            <a class="navbtn mr-7 font-medium" href="../Index2.html">
+            <a class="navbtn mr-7 font-medium" href="../index.html">
                 <span class="link link-underline link-underline-black text-black"> Home </span>
             </a>
             <a class="navbtn mr-7 font-medium" href="#Experience">
