--- a/css/style.css
+++ b/css/style.css
@@ -153,3 +153,14 @@ body {
     transition: .2s ease-in-out;
 
 }
+
+.title{
+    font-family: PowerGrotesk-reg;
+    font-size: 52px;
+    color: #010100;
+}
+
+.title span{
+    font-family: PowerGrotesk-heavy;
+    color: #AB0090;
+}
