--- a/include/navbar.html
+++ b/include/navbar.html
@@ -8,8 +8,8 @@
             <a class="navbtn mr-7 font-medium" href="../index.html">
                 <span class="link link-underline link-underline-black text-black"> Home </span>
             </a>
-            <a class="navbtn mr-7 font-medium" href="../pages/experience.html">
-                    <span class="link link-underline link-underline-black text-black"> Experience </span>
+            <a class="navbtn mr-7 font-medium" href="../pages/about-me.html">
+                    <span class="link link-underline link-underline-black text-black"> About Me </span>
                 </a>
             </a>
             <a class="navbtn mr-7 font-medium" href="#Portfolio">
