--- a/include/navbar.html
+++ b/include/navbar.html
@@ -12,7 +12,7 @@
                     <span class="link link-underline link-underline-black text-black"> About Me </span>
                 </a>
             </a>
-            <a class="navbtn mr-7 font-medium" href="#Portfolio">
+            <a class="navbtn mr-7 font-medium" href="../pages/portfolio.html">
                     <span class="link link-underline link-underline-black text-black"> Portfolio </span>
                 </a>
             </a>
@@ -23,7 +23,7 @@
           </nav>
           <button
             class="ResBtn inline-flex items-center md:mt-0"><a
-              href="https://drive.google.com/file/d/18ijb8T1B1UXtDIHcw3c-YUDx3uVdsZA4/view?usp=share_link" target="_blank"> Resume </a>
+              href="https://drive.google.com/file/d/1czEIiogA5w7n0oMnTQE6G_eI2Up1w6qX/view?usp=share_link" target="_blank"> Resume </a>
             
           </button>
         </div>
