contact page created an style updated

--- a/include/navbar.html
+++ b/include/navbar.html
@@ -16,7 +16,7 @@
                     <span class="link link-underline link-underline-black text-black"> Portfolio </span>
                 </a>
             </a>
-            <a class="navbtn mr-7 font-medium" href="#Contact">
+            <a class="navbtn mr-7 font-medium" href="../pages/contact.html">
                     <span class="link link-underline link-underline-black text-black"> Contact </span>
                 </a>
             </a>
